[package]
name = "exhume_ntfs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
exhume_body = "=0.1.1"
log = "0.4.25"
clap = "4.0"
clap-num = "1.1.1"
prettytable-rs = "^0.10"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
env_logger = "0.11.6"
byteorder = "1.4"
