[package]
name = "exhume_ntfs"
version = "0.1.7"
edition = "2024"
description = "Extract NT Filesystem specific artefacts from a given Partition."
documentation = "https://www.forensicxlab.com/docs/category/exhume---ntfs"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

exhume_body = "=0.3.4"

log = "0.4.25"
clap = "4.0"
clap-num = "1.1.1"
prettytable-rs = "^0.10"
capstone = "0.13.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
env_logger = "0.11.6"
byteorder = "1.4"
